include/El/blas_like/level1.h

/* UNEXPLAINED COMPILER BUG: 
  'cc' 4.8.2 in Ubuntu fails if "ElRange_i iRange" is replaced with 
  "ElRange_i I" */

/* Adjoint
   ======= */
/* B := A^H */
EL_EXPORT ElError ElAdjoint_c( ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElAdjoint_z( ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElAdjointDist_c( ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElAdjointDist_z( ElConstDistMatrix_z A, ElDistMatrix_z B );
EL_EXPORT ElError ElAdjointSparse_c
( ElConstSparseMatrix_c A, ElSparseMatrix_c B );
EL_EXPORT ElError ElAdjointSparse_z
( ElConstSparseMatrix_z A, ElSparseMatrix_z B );
EL_EXPORT ElError ElAdjointDistSparse_c
( ElConstDistSparseMatrix_c A, ElDistSparseMatrix_c B );
EL_EXPORT ElError ElAdjointDistSparse_z
( ElConstDistSparseMatrix_z A, ElDistSparseMatrix_z B );
/* SetDiagonal
   =========== */
/* TODO */

/* Shift
   ===== */
EL_EXPORT ElError ElShift_i( ElMatrix_i A, ElInt alpha );
EL_EXPORT ElError ElShift_s( ElMatrix_s A, float alpha );
EL_EXPORT ElError ElShift_d( ElMatrix_d A, double alpha );
EL_EXPORT ElError ElShift_c( ElMatrix_c A, complex_float alpha );
EL_EXPORT ElError ElShift_z( ElMatrix_z A, complex_double alpha );
EL_EXPORT ElError ElShiftDist_i( ElDistMatrix_i A, ElInt alpha );
EL_EXPORT ElError ElShiftDist_s( ElDistMatrix_s A, float alpha );
EL_EXPORT ElError ElShiftDist_d( ElDistMatrix_d A, double alpha );
EL_EXPORT ElError ElShiftDist_c( ElDistMatrix_c A, complex_float alpha );
EL_EXPORT ElError ElShiftDist_z( ElDistMatrix_z A, complex_double alpha );
EL_EXPORT ElError ElShiftDistMultiVec_i
( ElDistMultiVec_i A, ElInt alpha );
EL_EXPORT ElError ElShiftDistMultiVec_s
( ElDistMultiVec_s A, float alpha );
EL_EXPORT ElError ElShiftDistMultiVec_d
( ElDistMultiVec_d A, double alpha );
EL_EXPORT ElError ElShiftDistMultiVec_c
( ElDistMultiVec_c A, complex_float alpha );
EL_EXPORT ElError ElShiftDistMultiVec_z
( ElDistMultiVec_z A, complex_double alpha );
/* ShiftDiagonal
   ============= */
EL_EXPORT ElError ElShiftDiagonal_i
( ElMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonal_s
( ElMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonal_d
( ElMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonal_c
( ElMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonal_z
( ElMatrix_z A, complex_double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDist_i
( ElDistMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDist_s
( ElDistMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDist_d
( ElDistMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDist_c
( ElDistMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDist_z
( ElDistMatrix_z A, complex_double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalSparse_i
( ElSparseMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalSparse_s
( ElSparseMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalSparse_d
( ElSparseMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalSparse_c
( ElSparseMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalSparse_z
( ElSparseMatrix_z A, complex_double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDistSparse_i
( ElDistSparseMatrix_i A, ElInt alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDistSparse_s
( ElDistSparseMatrix_s A, float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDistSparse_d
( ElDistSparseMatrix_d A, double alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDistSparse_c
( ElDistSparseMatrix_c A, complex_float alpha, ElInt offset );
EL_EXPORT ElError ElShiftDiagonalDistSparse_z
( ElDistSparseMatrix_z A, complex_double alpha, ElInt offset );
/* Swap
   ==== */
EL_EXPORT ElError ElSwap_i
( ElOrientation orientation, ElMatrix_i X, ElMatrix_i Y );
EL_EXPORT ElError ElSwap_s
( ElOrientation orientation, ElMatrix_s X, ElMatrix_s Y );
EL_EXPORT ElError ElSwap_d
( ElOrientation orientation, ElMatrix_d X, ElMatrix_d Y );
EL_EXPORT ElError ElSwap_c
( ElOrientation orientation, ElMatrix_c X, ElMatrix_c Y );
EL_EXPORT ElError ElSwap_z
( ElOrientation orientation, ElMatrix_z X, ElMatrix_z Y );
EL_EXPORT ElError ElSwapDist_i
( ElOrientation orientation, ElDistMatrix_i X, ElDistMatrix_i Y );
EL_EXPORT ElError ElSwapDist_s
( ElOrientation orientation, ElDistMatrix_s X, ElDistMatrix_s Y );
EL_EXPORT ElError ElSwapDist_d
( ElOrientation orientation, ElDistMatrix_d X, ElDistMatrix_d Y );
EL_EXPORT ElError ElSwapDist_c
( ElOrientation orientation, ElDistMatrix_c X, ElDistMatrix_c Y );
EL_EXPORT ElError ElSwapDist_z
( ElOrientation orientation, ElDistMatrix_z X, ElDistMatrix_z Y );
EL_EXPORT ElError ElRowSwap_i( ElMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwap_s( ElMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwap_d( ElMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwap_c( ElMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwap_z( ElMatrix_z A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwapDist_i( ElDistMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwapDist_s( ElDistMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwapDist_d( ElDistMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwapDist_c( ElDistMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElRowSwapDist_z( ElDistMatrix_z A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwap_i( ElMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwap_s( ElMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwap_d( ElMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwap_c( ElMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwap_z( ElMatrix_z A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwapDist_i( ElDistMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwapDist_s( ElDistMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwapDist_d( ElDistMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwapDist_c( ElDistMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElColSwapDist_z( ElDistMatrix_z A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwap_i
( ElUpperOrLower uplo, ElMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwap_s
( ElUpperOrLower uplo, ElMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwap_d
( ElUpperOrLower uplo, ElMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwap_c
( ElUpperOrLower uplo, ElMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwap_z
( ElUpperOrLower uplo, ElMatrix_z A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwapDist_i
( ElUpperOrLower uplo, ElDistMatrix_i A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwapDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwapDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwapDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElInt to, ElInt from );
EL_EXPORT ElError ElSymmetricSwapDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElInt to, ElInt from );
/* B = A^T 
   ======= */
EL_EXPORT ElError ElTranspose_i( ElConstMatrix_i A, ElMatrix_i B );
EL_EXPORT ElError ElTranspose_s( ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElTranspose_d( ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElTranspose_c( ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElTranspose_z( ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElTransposeDist_i( ElConstDistMatrix_i A, ElDistMatrix_i B );
EL_EXPORT ElError ElTransposeDist_s( ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElTransposeDist_d( ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElTransposeDist_c( ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElTransposeDist_z( ElConstDistMatrix_z A, ElDistMatrix_z B );
EL_EXPORT ElError ElTransposeSparse_i
( ElConstSparseMatrix_i A, ElSparseMatrix_i B );
EL_EXPORT ElError ElTransposeSparse_s
( ElConstSparseMatrix_s A, ElSparseMatrix_s B );
EL_EXPORT ElError ElTransposeSparse_d
( ElConstSparseMatrix_d A, ElSparseMatrix_d B );
EL_EXPORT ElError ElTransposeSparse_c
( ElConstSparseMatrix_c A, ElSparseMatrix_c B );
EL_EXPORT ElError ElTransposeSparse_z
( ElConstSparseMatrix_z A, ElSparseMatrix_z B );
EL_EXPORT ElError ElTransposeDistSparse_i
( ElConstDistSparseMatrix_i A, ElDistSparseMatrix_i B );
EL_EXPORT ElError ElTransposeDistSparse_s
( ElConstDistSparseMatrix_s A, ElDistSparseMatrix_s B );
EL_EXPORT ElError ElTransposeDistSparse_d
( ElConstDistSparseMatrix_d A, ElDistSparseMatrix_d B );
EL_EXPORT ElError ElTransposeDistSparse_c
( ElConstDistSparseMatrix_c A, ElDistSparseMatrix_c B );
EL_EXPORT ElError ElTransposeDistSparse_z
( ElConstDistSparseMatrix_z A, ElDistSparseMatrix_z B );