python/blas_like/level1.py


# Shift
# -----
lib.ElShift_i.argtypes = \
lib.ElShiftDist_i.argtypes = \
lib.ElShiftDistMultiVec_i.argtypes = \
  [c_void_p,iType]
lib.ElShift_s.argtypes = \
lib.ElShiftDist_s.argtypes = \
lib.ElShiftDistMultiVec_s.argtypes = \
  [c_void_p,sType]
lib.ElShift_d.argtypes = \
lib.ElShiftDist_d.argtypes = \
lib.ElShiftDistMultiVec_d.argtypes = \
  [c_void_p,dType]
lib.ElShift_c.argtypes = \
lib.ElShiftDist_c.argtypes = \
lib.ElShiftDistMultiVec_c.argtypes = \
  [c_void_p,cType]
lib.ElShift_z.argtypes = \
lib.ElShiftDist_z.argtypes = \
lib.ElShiftDistMultiVec_z.argtypes = \
  [c_void_p,zType]
def Shift(A,alphaPre):
  alpha = TagToType(A.tag)(alphaPre)
  args = [A.obj,alpha]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElShift_i(*args)
    elif A.tag == sTag: lib.ElShift_s(*args)
    elif A.tag == dTag: lib.ElShift_d(*args)
    elif A.tag == cTag: lib.ElShift_c(*args)
    elif A.tag == zTag: lib.ElShift_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElShiftDist_i(*args)
    elif A.tag == sTag: lib.ElShiftDist_s(*args)
    elif A.tag == dTag: lib.ElShiftDist_d(*args)
    elif A.tag == cTag: lib.ElShiftDist_c(*args)
    elif A.tag == zTag: lib.ElShiftDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElShiftDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElShiftDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElShiftDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElShiftDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElShiftDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Shift diagonal
# --------------
lib.ElShiftDiagonal_i.argtypes = \
lib.ElShiftDiagonalDist_i.argtypes = \
lib.ElShiftDiagonalSparse_i.argtypes = \
lib.ElShiftDiagonalDistSparse_i.argtypes = \
  [c_void_p,iType,iType]
lib.ElShiftDiagonal_s.argtypes = \
lib.ElShiftDiagonalDist_s.argtypes = \
lib.ElShiftDiagonalSparse_s.argtypes = \
lib.ElShiftDiagonalDistSparse_s.argtypes = \
  [c_void_p,sType,iType]
lib.ElShiftDiagonal_d.argtypes = \
lib.ElShiftDiagonalDist_d.argtypes = \
lib.ElShiftDiagonalSparse_d.argtypes = \
lib.ElShiftDiagonalDistSparse_d.argtypes = \
  [c_void_p,dType,iType]
lib.ElShiftDiagonal_c.argtypes = \
lib.ElShiftDiagonalDist_c.argtypes = \
lib.ElShiftDiagonalSparse_c.argtypes = \
lib.ElShiftDiagonalDistSparse_c.argtypes = \
  [c_void_p,cType,iType]
lib.ElShiftDiagonal_z.argtypes = \
lib.ElShiftDiagonalDist_z.argtypes = \
lib.ElShiftDiagonalSparse_z.argtypes = \
lib.ElShiftDiagonalDistSparse_z.argtypes = \
  [c_void_p,zType,iType]

def ShiftDiagonal(A,alphaPre,offset=0):
  alpha = TagToType(A.tag)(alphaPre)
  args = [A.obj,alpha,offset]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElShiftDiagonal_i(*args)
    elif A.tag == sTag: lib.ElShiftDiagonal_s(*args)
    elif A.tag == dTag: lib.ElShiftDiagonal_d(*args)
    elif A.tag == cTag: lib.ElShiftDiagonal_c(*args)
    elif A.tag == zTag: lib.ElShiftDiagonal_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElShiftDiagonalDist_i(*args)
    elif A.tag == sTag: lib.ElShiftDiagonalDist_s(*args)
    elif A.tag == dTag: lib.ElShiftDiagonalDist_d(*args)
    elif A.tag == cTag: lib.ElShiftDiagonalDist_c(*args)
    elif A.tag == zTag: lib.ElShiftDiagonalDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElShiftDiagonalSparse_i(*args)
    elif A.tag == sTag: lib.ElShiftDiagonalSparse_s(*args)
    elif A.tag == dTag: lib.ElShiftDiagonalSparse_d(*args)
    elif A.tag == cTag: lib.ElShiftDiagonalSparse_c(*args)
    elif A.tag == zTag: lib.ElShiftDiagonalSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElShiftDiagonalDistSparse_i(*args)
    elif A.tag == sTag: lib.ElShiftDiagonalDistSparse_s(*args)
    elif A.tag == dTag: lib.ElShiftDiagonalDistSparse_d(*args)
    elif A.tag == cTag: lib.ElShiftDiagonalDistSparse_c(*args)
    elif A.tag == zTag: lib.ElShiftDiagonalDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Swap
# ----
lib.ElSwap_i.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwap_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwap_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwap_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwap_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwapDist_i.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwapDist_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwapDist_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwapDist_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElSwapDist_z.argtypes = [c_uint,c_void_p,c_void_p]
def Swap(orient,X,Y):
  if type(X) is not type(Y): raise Exception('Matrix types must match')
  if X.tag != Y.tag: raise Exception('Matrix datatypes must match')
  args = [orient,X.obj,Y.obj]
  if type(X) is Matrix:
    if   A.tag == iTag: lib.ElSwap_i(*args)
    elif A.tag == sTag: lib.ElSwap_s(*args)
    elif A.tag == dTag: lib.ElSwap_d(*args)
    elif A.tag == cTag: lib.ElSwap_c(*args)
    elif A.tag == zTag: lib.ElSwap_z(*args)
    else: DataExcept()
  elif type(X) is DistMatrix:
    if   A.tag == iTag: lib.ElSwapDist_i(*args)
    elif A.tag == sTag: lib.ElSwapDist_s(*args)
    elif A.tag == dTag: lib.ElSwapDist_d(*args)
    elif A.tag == cTag: lib.ElSwapDist_c(*args)
    elif A.tag == zTag: lib.ElSwapDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElRowSwap_i.argtypes = [c_void_p,iType,iType]
lib.ElRowSwap_s.argtypes = [c_void_p,iType,iType]
lib.ElRowSwap_d.argtypes = [c_void_p,iType,iType]
lib.ElRowSwap_c.argtypes = [c_void_p,iType,iType]
lib.ElRowSwap_z.argtypes = [c_void_p,iType,iType]
lib.ElRowSwapDist_i.argtypes = [c_void_p,iType,iType]
lib.ElRowSwapDist_s.argtypes = [c_void_p,iType,iType]
lib.ElRowSwapDist_d.argtypes = [c_void_p,iType,iType]
lib.ElRowSwapDist_c.argtypes = [c_void_p,iType,iType]
lib.ElRowSwapDist_z.argtypes = [c_void_p,iType,iType]
def RowSwap(A,iTo,iFrom):
  args = [A.obj,iTo,iFrom]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElRowSwap_i(*args)
    elif A.tag == sTag: lib.ElRowSwap_s(*args)
    elif A.tag == dTag: lib.ElRowSwap_d(*args)
    elif A.tag == cTag: lib.ElRowSwap_c(*args)
    elif A.tag == zTag: lib.ElRowSwap_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElRowSwapDist_i(*args)
    elif A.tag == sTag: lib.ElRowSwapDist_s(*args)
    elif A.tag == dTag: lib.ElRowSwapDist_d(*args)
    elif A.tag == cTag: lib.ElRowSwapDist_c(*args)
    elif A.tag == zTag: lib.ElRowSwapDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElColSwap_i.argtypes = [c_void_p,iType,iType]
lib.ElColSwap_s.argtypes = [c_void_p,iType,iType]
lib.ElColSwap_d.argtypes = [c_void_p,iType,iType]
lib.ElColSwap_c.argtypes = [c_void_p,iType,iType]
lib.ElColSwap_z.argtypes = [c_void_p,iType,iType]
lib.ElColSwapDist_i.argtypes = [c_void_p,iType,iType]
lib.ElColSwapDist_s.argtypes = [c_void_p,iType,iType]
lib.ElColSwapDist_d.argtypes = [c_void_p,iType,iType]
lib.ElColSwapDist_c.argtypes = [c_void_p,iType,iType]
lib.ElColSwapDist_z.argtypes = [c_void_p,iType,iType]
def ColSwap(A,jTo,jFrom):
  args = [A.obj,jTo,jFrom]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElColSwap_i(*args)
    elif A.tag == sTag: lib.ElColSwap_s(*args)
    elif A.tag == dTag: lib.ElColSwap_d(*args)
    elif A.tag == cTag: lib.ElColSwap_c(*args)
    elif A.tag == zTag: lib.ElColSwap_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElColSwapDist_i(*args)
    elif A.tag == sTag: lib.ElColSwapDist_s(*args)
    elif A.tag == dTag: lib.ElColSwapDist_d(*args)
    elif A.tag == cTag: lib.ElColSwapDist_c(*args)
    elif A.tag == zTag: lib.ElColSwapDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

lib.ElSymmetricSwap_i.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwap_s.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwap_d.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwap_c.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwap_z.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwapDist_i.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwapDist_s.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwapDist_d.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwapDist_c.argtypes = [c_uint,c_void_p,iType,iType]
lib.ElSymmetricSwapDist_z.argtypes = [c_uint,c_void_p,iType,iType]
def SymmetricSwap(uplo,A,jTo,jFrom):
  args = [uplo,A.obj,jTo,jFrom]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElSymmetricSwap_i(*args)
    elif A.tag == sTag: lib.ElSymmetricSwap_s(*args)
    elif A.tag == dTag: lib.ElSymmetricSwap_d(*args)
    elif A.tag == cTag: lib.ElSymmetricSwap_c(*args)
    elif A.tag == zTag: lib.ElSymmetricSwap_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElSymmetricSwapDist_i(*args)
    elif A.tag == sTag: lib.ElSymmetricSwapDist_s(*args)
    elif A.tag == dTag: lib.ElSymmetricSwapDist_d(*args)
    elif A.tag == cTag: lib.ElSymmetricSwapDist_c(*args)
    elif A.tag == zTag: lib.ElSymmetricSwapDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Transpose/Adjoint
# -----------------
lib.ElTranspose_i.argtypes = [c_void_p,c_void_p]
lib.ElTranspose_s.argtypes = [c_void_p,c_void_p]
lib.ElTranspose_d.argtypes = [c_void_p,c_void_p]
lib.ElTranspose_c.argtypes = [c_void_p,c_void_p]
lib.ElTranspose_z.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDist_i.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDist_s.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDist_d.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDist_c.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDist_z.argtypes = [c_void_p,c_void_p]
lib.ElTransposeSparse_i.argtypes = [c_void_p,c_void_p]
lib.ElTransposeSparse_s.argtypes = [c_void_p,c_void_p]
lib.ElTransposeSparse_d.argtypes = [c_void_p,c_void_p]
lib.ElTransposeSparse_c.argtypes = [c_void_p,c_void_p]
lib.ElTransposeSparse_z.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDistSparse_i.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDistSparse_s.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDistSparse_d.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDistSparse_c.argtypes = [c_void_p,c_void_p]
lib.ElTransposeDistSparse_z.argtypes = [c_void_p,c_void_p]

lib.ElAdjoint_c.argtypes = [c_void_p,c_void_p]
lib.ElAdjoint_z.argtypes = [c_void_p,c_void_p]
lib.ElAdjointDist_c.argtypes = [c_void_p,c_void_p]
lib.ElAdjointDist_z.argtypes = [c_void_p,c_void_p]
lib.ElAdjointSparse_c.argtypes = [c_void_p,c_void_p]
lib.ElAdjointSparse_z.argtypes = [c_void_p,c_void_p]
lib.ElAdjointDistSparse_c.argtypes = [c_void_p,c_void_p]
lib.ElAdjointDistSparse_z.argtypes = [c_void_p,c_void_p]
